Added modern content.

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -17,6 +17,8 @@
 
 		<div ng-show="selectedYear.number === 1922" ng-include="'app/modern/templates/sluck.html'"></div>
 
+		<div ng-show="selectedYear.number === 1923" ng-include="'app/modern/templates/pixelate.html'"></div>
+
 		<div ng-show="selectedYear.number === 1925" ng-include="'app/modern/templates/gallery.html'"></div>
 
 
