--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
 <div>
 	<div>
 		<ion-nav-bar class="bar-stable">
-			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Назад</ion-nav-back-button>
+			<ion-nav-back-button class="button-icon icon ion-ios-arrow-back">&#x41D;&#x430;&#x437;&#x430;&#x434;</ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view></ion-nav-view>
 	</div>
