--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,11 +1,11 @@
 <ion-view>
-	<ion-content overflow-scroll="true" padding="true" class="intro-back neucha-font">
+	<ion-content overflow-scroll="true" padding="true" class="intro-back helvetica-font" ng-click="goToApp()">
 		<div class="intro-title">
 			<div class="intro-logo"></div>
 			<p>Тры гісторыі</p>
 			<p>Беларускай Народнай Рэспублікі</p>
 		</div>
-		<p class="intro-text" ng-click="goToApp()">
+		<p class="intro-text">
 			Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
 			aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
