Fix styles national.

--- a/www/app/intro/intro.html
+++ b/www/app/intro/intro.html
@@ -1,5 +1,5 @@
 <ion-view>
-	<ion-content overflow-scroll="true" padding="true" class="intro-back helvetica-font" ng-click="goToApp()">
+	<ion-content overflow-scroll="true" padding="true" class="intro-back antiqua-font" ng-click="goToApp()">
 		<div class="intro-title">
 			<div class="intro-logo"></div>
 			<p>Тры гісторыі</p>
