Fix styles national.

--- a/www/app/chronicle/chronicle.html
+++ b/www/app/chronicle/chronicle.html
@@ -3,7 +3,7 @@
 
 		<div class="card chronicle-card">
 			<div class="national-card antiqua-font" ng-click="goToDetails('tabs.chronicleNational')">
-				НАЦЫЯНАЛІСТЫЧНАЯ ХРОНІКА
+				НАЦЫЯНАЛЬНАЯ ХРОНІКА
 			</div>
 		</div>
 
