--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -7,19 +7,19 @@
 
 
 
-		<div ng-show="selectedYear.number === 1918" ng-include="'app/modern/templates/mova.html'"></div>
+		<div ng-if="selectedYear.number === 1918" ng-include="'app/modern/templates/mova.html'"></div>
 
-		<div ng-show="selectedYear.number === 1919" ng-include="'app/modern/templates/last.html'"></div>
+		<div ng-if="selectedYear.number === 1919" ng-include="'app/modern/templates/last.html'"></div>
 
-		<div ng-show="selectedYear.number === 1920" ng-include="'app/modern/templates/points.html'"></div>
+		<div ng-if="selectedYear.number === 1920" ng-include="'app/modern/templates/points.html'"></div>
 
-		<div ng-show="selectedYear.number === 1921" ng-include="'app/modern/templates/cards.html'"></div>
+		<div ng-if="selectedYear.number === 1921" ng-include="'app/modern/templates/cards.html'" class="big-polaroids"></div>
 
-		<div ng-show="selectedYear.number === 1922" ng-include="'app/modern/templates/sluck.html'"></div>
+		<div ng-if="selectedYear.number === 1922" ng-include="'app/modern/templates/sluck.html'"></div>
 
-		<div ng-show="selectedYear.number === 1923" ng-include="'app/modern/templates/pixelate.html'"></div>
+		<div ng-if="selectedYear.number === 1923" ng-include="'app/modern/templates/pixelate.html'"></div>
 
-		<div ng-show="selectedYear.number === 1925" ng-include="'app/modern/templates/gallery.html'"></div>
+		<div ng-if="selectedYear.number === 1925" ng-include="'app/modern/templates/gallery.html'"></div>
 
 
 	</ion-content>
