--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -56,6 +56,28 @@
 		<div ng-if="selectedYear.number === 1922" ng-include="'app/national/templates/bssr.html'"></div>
 
 	</ion-content>
+	<ion-pull-up-footer class="bar-dark"
+	                    on-expand="footerExpand()"
+	                    on-collapse="footerCollapse()"
+	                    initial-state="minimized"
+	                    default-behavior="expand">
+		<ion-pull-up-handle width="100"
+		                    height="25"
+		                    toggle="ion-chevron-up ion-chevron-down"
+		                    class="ion-pull-up-handle">
+			<i class="icon ion-chevron-up"></i>
+		</ion-pull-up-handle>
+
+		<ion-pull-up-content class="national-back" scroll="false">
+			<div class="row">
+
+			</div>
+			<div class="row">
+
+			</div>
+		</ion-pull-up-content>
+
+	</ion-pull-up-footer>
 </ion-view>
 
 <script id="my-popover.html" type="text/ng-template">
