Added info for national chronicle.

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -36,7 +36,7 @@
 			<i class="icon ion-chevron-up"></i>
 		</ion-pull-up-handle>
 
-		<ion-pull-up-content class="modern-back" scroll="false">
+		<ion-pull-up-content class="modern-pull" scroll="false">
 			<div class="row">
 
 			</div>
