--- a/www/app/soviet/soviet.html
+++ b/www/app/soviet/soviet.html
@@ -37,7 +37,7 @@
 		<i class="icon ion-chevron-up"></i>
 	</ion-pull-up-handle>
 
-	<ion-pull-up-content class="soviet-back" scroll="false">
+	<ion-pull-up-content class="soviet-pull" scroll="false">
 		<div class="row">
 
 		</div>
