Fix for morph missed selected items.

--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -21,10 +21,11 @@
 
 		<div ng-if="selectedYear.number === 1919" ng-include="'app/national/templates/circle.html'"></div>
 
-		<div ng-if="selectedYear.number === 1920" ng-include="'app/national/templates/repressions.html'" class="center-swipe"></div>
+		<div ng-if="selectedYear.number === 1920"
+		     ng-include="'app/national/templates/repressions.html'"
+		     class="center-swipe"></div>
 
 		<div ng-if="selectedYear.number === 1921" ng-include="'app/national/templates/map.html'"></div>
-
 
 		<div ng-if="selectedYear.number === 1922" ng-include="'app/national/templates/bssr.html'"></div>
 
@@ -51,7 +52,8 @@
 
 			<div ng-if="selectedPull === 1915" ng-include="'app/national/templates/idea-pull.html'"></div>
 
-			<div ng-if="selectedPull === 1916" ng-include="'app/national/templates/tarashkevich-element-pull.html'"></div>
+			<div ng-if="selectedPull === 1916"
+			     ng-include="'app/national/templates/tarashkevich-element-pull.html'"></div>
 
 			<div ng-if="selectedPull === 1917" ng-include="'app/national/templates/udzelniki-pull.html'"></div>
 
