Added info for soviet and modern period.

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -37,12 +37,9 @@
 		</ion-pull-up-handle>
 
 		<ion-pull-up-content class="modern-pull" scroll="false">
-			<div class="row">
 
-			</div>
-			<div class="row">
+			<div ng-if="selectedPull === 1918" ng-include="'app/modern/templates/mova-pull.html'"></div>
 
-			</div>
 		</ion-pull-up-content>
 
 	</ion-pull-up-footer>
