Added info and video.

--- a/www/app/modern/modern.html
+++ b/www/app/modern/modern.html
@@ -40,6 +40,8 @@
 
 			<div ng-if="selectedPull === 1918" ng-include="'app/modern/templates/mova-pull.html'"></div>
 
+			<div ng-if="selectedPull === 1922" ng-include="'app/modern/templates/sluck-pull.html'"></div>
+
 		</ion-pull-up-content>
 
 	</ion-pull-up-footer>
