--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -5,6 +5,10 @@
 			<morph-carousel data-items="years" on-selected="selectedYear" show-value="number"></morph-carousel>
 		</div>
 
+		<div ng-if="selectedYear.number === 1910" ng-include="'app/national/templates/mova.html'"></div>
+
+		<div ng-if="selectedYear.number === 1911" ng-include="'app/national/templates/alphabet.html'"></div>
+
 		<div ng-if="selectedYear.number === 1912" ng-include="'app/national/templates/u.html'"></div>
 
 		<div ng-if="selectedYear.number === 1913" ng-include="'app/national/templates/lacinka.html'"></div>
@@ -43,6 +47,10 @@
 		</ion-pull-up-handle>
 
 		<ion-pull-up-content class="national-pull" scroll="false">
+
+			<div ng-if="selectedPull === 1910" ng-include="'app/national/templates/mova-pull.html'"></div>
+
+			<div ng-if="selectedPull === 1911" ng-include="'app/national/templates/alphabet-pull.html'"></div>
 
 			<div ng-if="selectedPull === 1912" ng-include="'app/national/templates/u-pull.html'"></div>
 
