Added new screens.

--- a/www/app/national/national.html
+++ b/www/app/national/national.html
@@ -31,6 +31,8 @@
 
 		<div ng-if="selectedYear.number === 1922" ng-include="'app/national/templates/bssr.html'"></div>
 
+		<div ng-if="selectedYear.number === 1923" ng-include="'app/national/templates/novy.html'"></div>
+
 		<div ng-if="selectedYear.number === 1924" ng-include="'app/national/templates/polska.html'"></div>
 
 		<div ng-if="selectedYear.number === 1925" ng-include="'app/national/templates/repressions.html'" class="center-swipe"></div>
