Added comments for new screens.

--- a/www/app/soviet/soviet.html
+++ b/www/app/soviet/soviet.html
@@ -54,7 +54,7 @@
 
 		<div ng-if="selectedPull === 1920" ng-include="'app/soviet/templates/sluck-pull.html'"></div>
 
-		<div ng-if="selectedYear.number === 1921" ng-include="'app/soviet/templates/souz-pull.html'"></div>
+		<div ng-if="selectedPull === 1921" ng-include="'app/soviet/templates/souz-pull.html'"></div>
 
 		<div ng-if="selectedPull === 1922" ng-include="'app/soviet/templates/reforma-pull.html'"></div>
 
